# Explore

./: .Rbuildignore  .gitignore  404.html  CMakeLists.txt  DESCRIPTION  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
.github/workflows/: check-standard.yaml  pkgdown.yaml
Clion/: main.cpp
R/: Explore-package.R  HelperFunctions.R  MainFunctions.R  RcppExports.R  testExplore.R
articles/: EXPLORE_withPLP.html  index.html
inst/: CMakeLists.txt  template.project
inst/Clion/: main.cpp
inst/examples/: iris.project  test.arff  test.project  train_data.arff  train_data.cutoff  train_data.project
inst/examples/complexity/: binary_10.arff  binary_10.cutoff  binary_10.project  binary_3.arff  binary_3.cutoff  binary_3.project  categorical_4.arff  categorical_4.project  categorical_4_large.arff  continuous_4.arff  continuous_4.project  continuous_4_small.arff  data_transformations.R  mix_4.arff  mix_4.cutoff  mix_4.project  mix_4_ordered.arff
inst/examples/plp/: test_plp.project
inst/examples/tests/: iris.cutoff  iris.project
inst/settings/: template.project
man/: Explore-package.Rd  aucrocExplore.Rd  aurocEXPLORE.Rd  candidateNumberExplore.Rd  changeSetting.Rd  getSetting.Rd  modelsCurveExplore.Rd  predictExplore.Rd  resultsExplore.Rd  rocCurveExplore.Rd  saveData.Rd  settingsExplore.Rd  trainExplore.Rd
news/: index.html
reference/: Explore-package.html  Explore.html  aurocEXPLORE.html  candidateNumberExplore.html  changeSetting.html  getSetting.html  index.html  modelsCurveExplore.html  predictExplore.html  resultsExplore.html  rocCurveExplore.html  saveData.html  settingsExplore.html  trainExplore.html
src/: ExploreInterface.cpp  Makevars  Makevars.win  RcppExports.cpp
src/C++/: CMakeLists.txt  common.cpp  common.h  stl.h  stlpmt.lib
src/C++/CMExplore/: CMExplore.cbproj  Makefile  ProjectGroup1.groupproj  ProjectGroup1.groupproj.local  cmdline.h  initialise.h  main.cpp  main.h  mainforR.h  test.project
src/C++/CMExplore/Debug/: CMExplore.#0J  CMExplore.map  australian.arff  breast-cancer.arff  output-1.result  test.project
src/C++/CMExplore/Debug/__history/: test.project.~1~  test.project.~2~  test.project.~3~
src/C++/CMExplore/__history/: CMExplore.cbproj.local.~1~  CMExplore.cbproj.local.~4~  initialise.h.~1~  initialise.h.~2~  initialise.h.~3~  initialise.h.~4~  main.cpp.~23~  main.cpp.~24~  main.cpp.~25~  main.cpp.~26~  main.cpp.~27~  main.cpp.~28~  main.cpp.~29~  main.cpp.~30~  main.cpp.~31~  main.cpp.~32~  main.h.~2~  main.h.~3~
src/C++/Explore/: bin.cpp  bin.h  candidate.cpp  candidate.h  classdef.cpp  classdef.h  condition.cpp  condition.h  conjunction.cpp  conjunction.h  constraint.cpp  constraint.h  cutoff.cpp  cutoff.h  explore.cpp  explore.h  feature.cpp  feature.h  initialise.h  mandatory.cpp  mandatory.h  observation.cpp  observation.h  outbuf.h  partition.cpp  partition.h  performance.cpp  performance.h  population.cpp  population.h  roc.cpp  roc.h  rocpair.cpp  rocpair.h  rule.cpp  rule.h  set.cpp  set.h  timing.cpp  timing.h  (+1 more)
src/C++/Explore/__history/: bin.cpp.~1~  bin.h.~1~  bin.h.~2~  bin.h.~3~  bin.h.~4~  bin.h.~5~  candidate.cpp.~10~  candidate.cpp.~11~  candidate.cpp.~12~  candidate.cpp.~13~  candidate.cpp.~14~  candidate.cpp.~15~  candidate.cpp.~17~  candidate.cpp.~18~  candidate.cpp.~9~  candidate.h.~1~  classdef.cpp.~18~  classdef.cpp.~19~  classdef.cpp.~20~  classdef.cpp.~21~  classdef.cpp.~22~  classdef.cpp.~23~  classdef.cpp.~25~  classdef.h.~1~  classdef.h.~2~  classdef.h.~3~  classdef.h.~4~  classdef.h.~5~  condition.cpp.~1~  condition.h.~1~  conjunction.cpp.~2~  cutoff.cpp.~1~  cutoff.h.~1~  explore.cpp.~218~  explore.cpp.~219~  explore.cpp.~220~  explore.cpp.~221~  explore.cpp.~222~  explore.cpp.~223~  explore.cpp.~224~  (+128 more)
src/C++/IOExplore/: IOExplore.cpp  IOExplore.h  initialise.h
src/C++/IOExplore/__history/: IOExplore.cpp.~169~  IOExplore.cpp.~170~  IOExplore.cpp.~171~  IOExplore.cpp.~172~  IOExplore.cpp.~173~  IOExplore.cpp.~174~  IOExplore.cpp.~175~  IOExplore.cpp.~176~  IOExplore.cpp.~177~  IOExplore.cpp.~178~  IOExplore.h.~24~  IOExplore.h.~25~  IOExplore.h.~26~  IOExplore.h.~28~  IOExplore.h.~29~  IOExplore.h.~30~  IOExplore.h.~31~  IOExplore.h.~32~  IOExplore.h.~33~
src/C++/Test/: iris.cutoff  test.project
tests/: iris.project  tests.R  testthat.R  train_data.arff  train_data.project
tests/testthat/: iris.project  test-HelperFunctions.R  test-MainFunctions.R  test-package_tests.R  test-runExplore.R  test-testExplore.R  train_data.project
tests/testthat/deprecated_tests/: README.html  README.md  test-runExplore.R
tests/testthat/examples/: iris.project  train_data.project
vignettes/: EXPLORE_withPLP.Rmd
