cmake_minimum_required(VERSION 3.17)
project(Explore)

set(CMAKE_CXX_STANDARD 14)

set(Boost_INCLUDE_DIR /Users/aniekmarkus/Documents/Documents/Code/C++/boost_1_74_0)
set(Boost_LIBRARY_DIR /Users/aniekmarkus/Documents/Documents/Code/C++/boost_1_74_0/libs)
include_directories(${Boost_INCLUDE_DIR})
link_directories(${Boost_LIBRARY_DIR})

include_directories(.)
include_directories(CMExplore)
include_directories(CMExplore/Debug)
include_directories(Explore)
include_directories(IOExplore)

add_executable(Explore
        Clion/main.cpp
        src/C++/CMExplore/Debug/australian.arff
        src/C++/CMExplore/Debug/bin.obj
        src/C++/CMExplore/Debug/breast-cancer.arff
        src/C++/CMExplore/Debug/candidate.obj
        src/C++/CMExplore/Debug/classdef.obj
        src/C++/CMExplore/Debug/CMExplore.exe
        src/C++/CMExplore/Debug/CMExplore.map
        src/C++/CMExplore/Debug/CMExplore.pch
        src/C++/CMExplore/Debug/CMExplore.tds
        src/C++/CMExplore/Debug/common.obj
        src/C++/CMExplore/Debug/condition.obj
        src/C++/CMExplore/Debug/conjunction.obj
        src/C++/CMExplore/Debug/constraint.obj
        src/C++/CMExplore/Debug/cutoff.obj
        src/C++/CMExplore/Debug/explore.obj
        src/C++/CMExplore/Debug/feature.obj
        src/C++/CMExplore/Debug/IOExplore.obj
        src/C++/CMExplore/Debug/main.obj
        src/C++/CMExplore/Debug/mandatory.obj
        src/C++/CMExplore/Debug/observation.obj
        src/C++/CMExplore/Debug/output-1.result
        src/C++/CMExplore/Debug/partition.obj
        src/C++/CMExplore/Debug/performance.obj
        src/C++/CMExplore/Debug/population.obj
        src/C++/CMExplore/Debug/roc.obj
        src/C++/CMExplore/Debug/rocpair.obj
        src/C++/CMExplore/Debug/rule.obj
        src/C++/CMExplore/Debug/set.obj
        src/C++/CMExplore/Debug/test.project
        src/C++/CMExplore/Debug/timing.obj
        src/C++/CMExplore/cmdline.h
        src/C++/CMExplore/CMExplore.cbproj
        src/C++/CMExplore/CMExplore.cbproj.local
        src/C++/CMExplore/initialise.h
        src/C++/CMExplore/main.h
        src/C++/CMExplore/Makefile
        src/C++/CMExplore/ProjectGroup1.groupproj
        src/C++/CMExplore/ProjectGroup1.groupproj.local
        src/C++/Explore/bin.cpp
        src/C++/Explore/bin.h
        src/C++/Explore/candidate.cpp
        src/C++/Explore/candidate.h
        src/C++/Explore/classdef.cpp
        src/C++/Explore/classdef.h
        src/C++/Explore/condition.cpp
        src/C++/Explore/condition.h
        src/C++/Explore/conjunction.cpp
        src/C++/Explore/conjunction.h
        src/C++/Explore/constraint.cpp
        src/C++/Explore/constraint.h
        src/C++/Explore/cutoff.cpp
        src/C++/Explore/cutoff.h
        src/C++/Explore/explore.cpp
        src/C++/Explore/explore.h
        src/C++/Explore/feature.cpp
        src/C++/Explore/feature.h
        src/C++/Explore/initialise.h
        src/C++/Explore/mandatory.cpp
        src/C++/Explore/mandatory.h
        src/C++/Explore/observation.cpp
        src/C++/Explore/observation.h
        src/C++/Explore/outbuf.h
        src/C++/Explore/partition.cpp
        src/C++/Explore/partition.h
        src/C++/Explore/performance.cpp
        src/C++/Explore/performance.h
        src/C++/Explore/population.cpp
        src/C++/Explore/population.h
        src/C++/Explore/roc.cpp
        src/C++/Explore/roc.h
        src/C++/Explore/rocpair.cpp
        src/C++/Explore/rocpair.h
        src/C++/Explore/rule.cpp
        src/C++/Explore/rule.h
        src/C++/Explore/set.cpp
        src/C++/Explore/set.h
        src/C++/Explore/timing.cpp
        src/C++/Explore/timing.h
        src/C++/Explore/values.h
        src/C++/IOExplore/initialise.h
        src/C++/IOExplore/IOExplore.cpp
        src/C++/IOExplore/IOExplore.h
        src/C++/Test/iris.arff
        src/C++/Test/iris.cutoff
        src/C++/Test/test.project
        src/C++/common.cpp
        src/C++/common.h
        src/C++/stl.h
        src/C++/stlpmt.lib)
